seaqt/QtCore/gen_qbasictimer.h

class QBasicTimer;
class QObject;
typedef struct QBasicTimer QBasicTimer;
typedef struct QObject QObject;
QBasicTimer* QBasicTimer_new_QBasicTimer(QBasicTimer* param1);
QBasicTimer* QBasicTimer_new();
void QBasicTimer_operatorAssign(QBasicTimer* self, QBasicTimer* param1);
void QBasicTimer_swap(QBasicTimer* self, QBasicTimer* other);
bool QBasicTimer_isActive(const QBasicTimer* self);
int QBasicTimer_timerId(const QBasicTimer* self);
void QBasicTimer_start_msec_obj(QBasicTimer* self, int msec, QObject* obj);
void QBasicTimer_start_msec_timerType_obj(QBasicTimer* self, int msec, int timerType, QObject* obj);
void QBasicTimer_stop(QBasicTimer* self);